--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="https://rexia.com.pk">About</a></li>
+            <li><a href="https://rexia.com.pk">Contact</a></li>
 
           </ul>
 
@@ -48,7 +48,7 @@
         <h1>Perfect Match</h1>
         <h3>The only feline matching app</h3>
         <hr>
-        <button class="btn btn-default btn-lg" type="button" name="button"><i class="fa fa-paw"></i>   Get Started</button>
+        <a href="https://rexia.com.pk"><button class="btn btn-default btn-lg" type="button" name="button"><i class="fa fa-paw"></i> Get Started</button></a>
       </div>
 
    </div>
